@@ -1,3 +1,8 @@
+2009-02-24  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/unix/sysv/linux/bits/posix_opt.h (_BITS_POSIX_OPT_H):
+	Unify name of include protector macro.
+
 2009-02-14  SUGIOKA Toshinobu  <sugioka@itonet.co.jp>
 
 	* sysdeps/unix/sysv/linux/sh/lowlevellock.S: Define
