@@ -1,5 +1,9 @@
 2009-02-24  Ulrich Drepper  <drepper@redhat.com>
 
+	* sysdeps/unix/sysv/linux/sysconf.c (__sysconf):
+	/proc/sys/kenrel/rtsig_max doesn't exist anymore, use getrlimit
+	instead.
+
 	* io/sys/stat.h: The lstat functions have been mandatory since 2001.
 
 	* time/tzset.c (tzset_internal): Correct parsing of TZ envvar.
